Closed
Bug 1992283
Opened 1 month ago
Closed 1 month ago
[ews] Hashed folders are replaced with hashed name after restart.
Categories
(MailNews Core :: Networking: Exchange, defect)
MailNews Core
Networking: Exchange
Tracking
(Not tracked)
RESOLVED
FIXED
145 Branch
People
(Reporter: edicharry, Assigned: edicharry)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
STR after D267111 lands:
- Create a folder in an EWS account that starts with a
.(period). After D267111 lands, the folders are created correctly. - Exit Thunderbird.
- Restart Thunderbird and the folder name has been replaced with a hash.
OR:
- With a fresh profile connect, to an EWS account that has one or more folders with a
.in the name. - After D267111 lands, the folders are correctly synchronized from the server.
- Exit and restart Thunderbird. The folders are still correct.
- Exit and restart again. The folders have been replaced with hashes.
| Assignee | ||
Comment 1•1 month ago
|
||
Tested in 140esr, and it looks like this has always been an issue, so this isn't a regression.
| Assignee | ||
Updated•1 month ago
|
Blocks: tb-ms-exchange-phase4
| Assignee | ||
Comment 2•1 month ago
|
||
Updated•1 month ago
|
Attachment #9518181 -
Attachment description: WIP: Bug 1992283 - Correctly query EWS folder names from the database. → Bug 1992283 - Correctly query EWS folder names from the database. r=#thunderbird-back-end-reviewers
| Assignee | ||
Updated•1 month ago
|
Keywords: checkin-needed-tb
Target Milestone: --- → 145 Branch
Pushed by vineet@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/7d6c5ef30bc6
Correctly query EWS folder names from the database. r=BenC
You need to log in
before you can comment on or make changes to this bug.
Description
•