Bug 1992283 - Correctly query EWS folder names from the database. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D267486

--HG--
extra : amend_source : bbf089175132cd2e210aa681ee488f9e77cfe58d